// Vitest Snapshot v1

exports[`<PostsTemplate /> > should match snapshot 1`] = `
.c6 {
  color: #082032;
  line-height: 1.2;
  font-size: 2.4rem;
  text-transform: uppercase;
}

.c12 {
  color: #082032;
  line-height: 1.2;
  font-size: 2.4rem;
  text-transform: none;
}

.c16 .c5 {
  margin: 0;
  margin-top: 1rem;
  margin-bottom: 1.6rem;
}

.c16 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c16:hover a {
  color: #E94560;
}

.c16:hover img {
  opacity: 0.8;
}

.c17 {
  max-width: 100%;
  -webkit-transition: opacity 300ms ease-in-out;
  transition: opacity 300ms ease-in-out;
}

.c14 {
  width: '100%';
}

.c15 {
  max-width: 120rem;
  margin: 0 auto;
  display: grid;
  grid-template-columns: repeat(auto-fill,minmax(28rem,1fr));
  gap: 3.2rem;
  padding: 3.2rem;
}

.c20 {
  font-size: 1.8rem;
  line-height: 1.5;
}

.c20 p {
  margin: 2.4rem 0;
}

.c20 a {
  color: #E94560;
}

.c20 a:visited,
.c20 a:link {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c20 a:hover {
  -webkit-filter: brightness(50%);
  filter: brightness(50%);
}

.c20 pre {
  background-color: #2C394B;
  padding: 2.4rem;
  font-family: monospace;
  color: #B2C8DF;
  margin: 4.0rem 0;
  width: 100%;
  font-size: 1.6rem;
  overflow-x: auto;
}

.c20 pre code {
  background: inherit;
  color: inherit;
}

.c20 code {
  font-family: monospace;
  color: #B2C8DF;
  font-size: 1.6rem;
  background: #2C394B;
  padding: 0.2rem;
  margin: 0.2rem;
  border-radius: 5px;
}

.c20 img {
  max-width: 100%;
}

.c20 .image {
  background: #DDDDDD;
  line-height: 0;
  margin: 2.4rem 0;
}

.c20 .image figcaption {
  font-size: 1.6rem;
  padding: 1.6rem;
  text-align: center;
  line-height: 1.3;
}

.c20 .image-style-side {
  float: right;
  max-width: 50%;
  margin: 2.4rem;
}

.c20 hr {
  border: none;
  border-bottom: 0.1rem solid #DDDDDD;
}

.c20 ul,
.c20 ol {
  margin: 2.4rem;
}

.c20 .table {
  width: 100%;
  overflow: hidden;
  overflow-x: auto;
}

.c20 table {
  width: 100%;
  border-collapse: collapse;
  margin: 2.4rem 0;
}

.c20 table td,
.c20 table th {
  padding: 1.6rem;
  border: 0.1rem solid #DDDDDD;
}

.c20 blockquote {
  border-left: 0.5rem solid #E94560;
  color: #AAAAAA;
  -webkit-filter: brightness(80%);
  filter: brightness(80%);
  padding-left: 2.4rem;
  font-style: italic;
  margin: 2.4rem;
}

.c19 {
  text-align: center;
  border-top: 0.1rem solid #DDDDDD;
}

.c19 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c19 .heart {
  color: #E94560;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c7 > img {
  width: 150px;
  height: 150px;
  border-radius: 50%;
}

.c10 {
  margin: 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  max-width: 96rem;
  padding-bottom: 6.4rem;
  font-size: 1.6rem;
  color: #333333;
}

.c10 .c5 {
  margin: 0 0 0.6rem;
}

.c10 img:hover {
  -webkit-transition: all ease-in-out 300ms;
  transition: all ease-in-out 300ms;
  -webkit-filter: brightness(70%);
  filter: brightness(70%);
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  margin-left: 3.2rem;
  max-width: 48rem;
}

.c2 {
  background: #082032;
  padding: 3.2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  z-index: 1;
  width: 100%;
  max-width: 32rem;
  height: 100vh;
  top: 0;
  left: 0rem;
  -webkit-transition: all 400ms ease-in-out;
  transition: all 400ms ease-in-out;
  overflow-y: auto;
  box-shadow: 5px 0 10px -2px #000000;
  left: -36rem;
  overflow-y: hidden;
}

.c2::-webkit-scrollbar {
  width: 10px;
}

.c2::-webkit-scrollbar-track {
  background: #082032;
}

.c2::-webkit-scrollbar-thumb {
  background: #E94560;
  border-radius: 10px;
}

.c2::-webkit-scrollbar-thumb:hover {
  background: #720d1e;
}

.c3 {
  margin: auto;
  width: 100%;
}

.c4 .c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
  margin-bottom: 4.8rem;
}

.c4 img {
  border: 0.5rem solid #E94560;
}

.c0 {
  position: fixed;
  top: 2.4rem;
  color: #FFFFFF;
  background: #082032;
  z-index: 2;
  width: 3rem;
  height: 3rem;
  left: 26rem;
  border-radius: 4px;
  -webkit-transition: all 400ms ease-in-out;
  transition: all 400ms ease-in-out;
  left: 1rem;
  color: #FFFFFF;
}

.c1 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c8 {
  display: block;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-bottom: 1.6rem;
  font-size: 1.8rem;
  -webkit-transition: all ease-in-out 100ms;
  transition: all ease-in-out 100ms;
}

.c8:hover {
  border-right: 0.5rem solid #E94560;
  color: #E94560;
}

.c9 {
  margin-top: 6.4rem;
}

.c13 {
  max-width: 120rem;
  width: 100%;
  margin: 0 auto;
  margin-bottom: 6.4rem;
}

.c18 {
  max-width: 120rem;
  width: 100%;
  margin: 0 auto;
  padding: 3.2rem;
}

.c21 {
  position: fixed;
  background-color: #082032;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 4rem;
  height: 4rem;
  bottom: 2rem;
  right: 2rem;
  z-index: 6;
  opacity: 0.7;
  border-radius: 50%;
  border: 0.1rem solid #fff;
}

.c21:hover {
  -webkit-transition: 500ms ease-in-out all;
  transition: 500ms ease-in-out all;
  background-color: #333333;
  opacity: unset;
}

@media (max-width:360px) {
  .c15 {
    grid-template-columns: 1fr;
  }
}

@media (max-width:768px) {
  .c20 {
    font-size: 2rem;
  }

  .c20 .image-style-side {
    float: none;
    max-width: 100%;
    margin: 0;
  }
}

@media ((max-width:300px)) {
  .c0 {
    left: 1rem;
  }
}

<div>
  <div
    class=""
  >
    <a
      aria-label="Open or Close menu"
      class="c0"
      href="#"
      title="Open or Close menu"
    >
      <svg
        aria-hidden="true"
        aria-label="Open menu"
        class="c1"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
        />
      </svg>
    </a>
    <div
      aria-hidden="true"
      class="c2"
    >
      <nav
        class="c3"
      >
        <div
          class="c4"
        >
          <h1
            class="c5 c6"
          >
            <a
              class="c7"
              href="/"
              target="_self"
            >
              <img
                alt="Test blog"
                src="https://res.cloudinary.com/ddiiakz1t/image/upload/v1662119066/bob_c83cb89756.jpg"
              />
            </a>
          </h1>
        </div>
        <a
          class="c8"
          href="#texto"
          target="_self"
        >
          O texto
        </a>
        <a
          class="c8"
          href="#link-2"
          target="_self"
        >
          Link 2
        </a>
      </nav>
    </div>
    <div
      class="c9"
    >
      <header
        class="c10"
      >
        <h1
          class="c5 c6"
        >
          <a
            class="c7"
            href="/"
            target="_self"
          >
            <img
              alt="Test blog - A blog test then Idon't know what describe, it is random words just test"
              src="https://res.cloudinary.com/ddiiakz1t/image/upload/v1662119066/bob_c83cb89756.jpg"
            />
          </a>
        </h1>
        <div
          class="c11"
        >
          <h2
            class="c5 c12"
          >
            Test blog
          </h2>
          <p>
            A blog test then Idon't know what describe, it is random words just test
          </p>
        </div>
      </header>
    </div>
    <div
      class="c13"
    >
      <div
        class="c14"
      >
        <div
          class="c15"
        >
          <div
            class="c16"
          >
            <a
              href="/post/blog-sobre-nextjs"
            >
              <img
                alt="Blog sobre Nextjs"
                class="c17"
                src="https://res.cloudinary.com/ddiiakz1t/image/upload/v1662140975/next_capa_ba07b5ec5d.png"
              />
            </a>
            <h2
              class="c5 c12"
            >
              <a
                href="/post/blog-sobre-nextjs"
              >
                Blog sobre Nextjs
              </a>
            </h2>
            <p
              class=""
            >
              Esse é um blog que fala um pouco sobre Next e como ele funciona.
            </p>
          </div>
          <div
            class="c16"
          >
            <a
              href="/post/blog-test-2"
            >
              <img
                alt="Blog test 2"
                class="c17"
                src="https://res.cloudinary.com/ddiiakz1t/image/upload/v1662370320/Programacao_Java_Script_87030c9a89.jpg"
              />
            </a>
            <h2
              class="c5 c12"
            >
              <a
                href="/post/blog-test-2"
              >
                Blog test 2
              </a>
            </h2>
            <p
              class=""
            >
              Nostra aliquet vulputate turpis. Aptent tortor tempus accumsan. Sociosqu lacus non nam condimentum nulla tincidunt sapien vehicula pulvinar nunc est. Montes bibendum ultricies semper sociis lacus nam platea eget primis erat.
            </p>
          </div>
          <div
            class="c16"
          >
            <a
              href="/post/blog-teste"
            >
              <img
                alt="Blog teste"
                class="c17"
                src="https://res.cloudinary.com/ddiiakz1t/image/upload/v1662370168/anime_girl_headphones_working_4k_5l_5327313817.jpg"
              />
            </a>
            <h2
              class="c5 c12"
            >
              <a
                href="/post/blog-teste"
              >
                Blog teste
              </a>
            </h2>
            <p
              class=""
            >
              Fermentum congue himenaeos augue integer. Nascetur sociosqu convallis metus amet vulputate arcu. Potenti volutpat fringilla sit id sit, tempus pellentesque primis ullamcorper iaculis interdum. 
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c18"
    >
      <footer
        class="c19"
      >
        <p
          class="c20"
        >
          <p>
            O texto da footer
          </p>
        </p>
      </footer>
    </div>
    <a
      aria-label="Go to top"
      class="c21"
      href="#"
      title="Go to top"
    >
      <svg
        aria-hidden="true"
        class="c1"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6 1.41 1.41z"
        />
      </svg>
    </a>
  </div>
</div>
`;

exports[`<PostsTemplate /> > should match snapshot without posts 1`] = `
.c6 {
  color: #082032;
  line-height: 1.2;
  font-size: 2.4rem;
  text-transform: uppercase;
}

.c12 {
  color: #082032;
  line-height: 1.2;
  font-size: 2.4rem;
  text-transform: none;
}

.c14 {
  width: '100%';
}

.c15 {
  padding: 3.2rem;
  text-align: center;
  font-size: 2.4rem;
  font-weight: 700;
  color: #E94560;
}

.c16 {
  max-width: 120rem;
  margin: 0 auto;
  display: grid;
  grid-template-columns: repeat(auto-fill,minmax(28rem,1fr));
  gap: 3.2rem;
  padding: 3.2rem;
}

.c19 {
  font-size: 1.8rem;
  line-height: 1.5;
}

.c19 p {
  margin: 2.4rem 0;
}

.c19 a {
  color: #E94560;
}

.c19 a:visited,
.c19 a:link {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c19 a:hover {
  -webkit-filter: brightness(50%);
  filter: brightness(50%);
}

.c19 pre {
  background-color: #2C394B;
  padding: 2.4rem;
  font-family: monospace;
  color: #B2C8DF;
  margin: 4.0rem 0;
  width: 100%;
  font-size: 1.6rem;
  overflow-x: auto;
}

.c19 pre code {
  background: inherit;
  color: inherit;
}

.c19 code {
  font-family: monospace;
  color: #B2C8DF;
  font-size: 1.6rem;
  background: #2C394B;
  padding: 0.2rem;
  margin: 0.2rem;
  border-radius: 5px;
}

.c19 img {
  max-width: 100%;
}

.c19 .image {
  background: #DDDDDD;
  line-height: 0;
  margin: 2.4rem 0;
}

.c19 .image figcaption {
  font-size: 1.6rem;
  padding: 1.6rem;
  text-align: center;
  line-height: 1.3;
}

.c19 .image-style-side {
  float: right;
  max-width: 50%;
  margin: 2.4rem;
}

.c19 hr {
  border: none;
  border-bottom: 0.1rem solid #DDDDDD;
}

.c19 ul,
.c19 ol {
  margin: 2.4rem;
}

.c19 .table {
  width: 100%;
  overflow: hidden;
  overflow-x: auto;
}

.c19 table {
  width: 100%;
  border-collapse: collapse;
  margin: 2.4rem 0;
}

.c19 table td,
.c19 table th {
  padding: 1.6rem;
  border: 0.1rem solid #DDDDDD;
}

.c19 blockquote {
  border-left: 0.5rem solid #E94560;
  color: #AAAAAA;
  -webkit-filter: brightness(80%);
  filter: brightness(80%);
  padding-left: 2.4rem;
  font-style: italic;
  margin: 2.4rem;
}

.c18 {
  text-align: center;
  border-top: 0.1rem solid #DDDDDD;
}

.c18 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c18 .heart {
  color: #E94560;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c7 > img {
  width: 150px;
  height: 150px;
  border-radius: 50%;
}

.c10 {
  margin: 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  max-width: 96rem;
  padding-bottom: 6.4rem;
  font-size: 1.6rem;
  color: #333333;
}

.c10 .c5 {
  margin: 0 0 0.6rem;
}

.c10 img:hover {
  -webkit-transition: all ease-in-out 300ms;
  transition: all ease-in-out 300ms;
  -webkit-filter: brightness(70%);
  filter: brightness(70%);
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  margin-left: 3.2rem;
  max-width: 48rem;
}

.c2 {
  background: #082032;
  padding: 3.2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  z-index: 1;
  width: 100%;
  max-width: 32rem;
  height: 100vh;
  top: 0;
  left: 0rem;
  -webkit-transition: all 400ms ease-in-out;
  transition: all 400ms ease-in-out;
  overflow-y: auto;
  box-shadow: 5px 0 10px -2px #000000;
  left: -36rem;
  overflow-y: hidden;
}

.c2::-webkit-scrollbar {
  width: 10px;
}

.c2::-webkit-scrollbar-track {
  background: #082032;
}

.c2::-webkit-scrollbar-thumb {
  background: #E94560;
  border-radius: 10px;
}

.c2::-webkit-scrollbar-thumb:hover {
  background: #720d1e;
}

.c3 {
  margin: auto;
  width: 100%;
}

.c4 .c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
  margin-bottom: 4.8rem;
}

.c4 img {
  border: 0.5rem solid #E94560;
}

.c0 {
  position: fixed;
  top: 2.4rem;
  color: #FFFFFF;
  background: #082032;
  z-index: 2;
  width: 3rem;
  height: 3rem;
  left: 26rem;
  border-radius: 4px;
  -webkit-transition: all 400ms ease-in-out;
  transition: all 400ms ease-in-out;
  left: 1rem;
  color: #FFFFFF;
}

.c1 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c8 {
  display: block;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-bottom: 1.6rem;
  font-size: 1.8rem;
  -webkit-transition: all ease-in-out 100ms;
  transition: all ease-in-out 100ms;
}

.c8:hover {
  border-right: 0.5rem solid #E94560;
  color: #E94560;
}

.c9 {
  margin-top: 6.4rem;
}

.c13 {
  max-width: 120rem;
  width: 100%;
  margin: 0 auto;
  margin-bottom: 6.4rem;
}

.c17 {
  max-width: 120rem;
  width: 100%;
  margin: 0 auto;
  padding: 3.2rem;
}

.c20 {
  position: fixed;
  background-color: #082032;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 4rem;
  height: 4rem;
  bottom: 2rem;
  right: 2rem;
  z-index: 6;
  opacity: 0.7;
  border-radius: 50%;
  border: 0.1rem solid #fff;
}

.c20:hover {
  -webkit-transition: 500ms ease-in-out all;
  transition: 500ms ease-in-out all;
  background-color: #333333;
  opacity: unset;
}

@media (max-width:360px) {
  .c16 {
    grid-template-columns: 1fr;
  }
}

@media (max-width:768px) {
  .c19 {
    font-size: 2rem;
  }

  .c19 .image-style-side {
    float: none;
    max-width: 100%;
    margin: 0;
  }
}

@media ((max-width:300px)) {
  .c0 {
    left: 1rem;
  }
}

<div>
  <div
    class=""
  >
    <a
      aria-label="Open or Close menu"
      class="c0"
      href="#"
      title="Open or Close menu"
    >
      <svg
        aria-hidden="true"
        aria-label="Open menu"
        class="c1"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
        />
      </svg>
    </a>
    <div
      aria-hidden="true"
      class="c2"
    >
      <nav
        class="c3"
      >
        <div
          class="c4"
        >
          <h1
            class="c5 c6"
          >
            <a
              class="c7"
              href="/"
              target="_self"
            >
              <img
                alt="Test blog"
                src="https://res.cloudinary.com/ddiiakz1t/image/upload/v1662119066/bob_c83cb89756.jpg"
              />
            </a>
          </h1>
        </div>
        <a
          class="c8"
          href="#texto"
          target="_self"
        >
          O texto
        </a>
        <a
          class="c8"
          href="#link-2"
          target="_self"
        >
          Link 2
        </a>
      </nav>
    </div>
    <div
      class="c9"
    >
      <header
        class="c10"
      >
        <h1
          class="c5 c6"
        >
          <a
            class="c7"
            href="/"
            target="_self"
          >
            <img
              alt="Test blog - A blog test then Idon't know what describe, it is random words just test"
              src="https://res.cloudinary.com/ddiiakz1t/image/upload/v1662119066/bob_c83cb89756.jpg"
            />
          </a>
        </h1>
        <div
          class="c11"
        >
          <h2
            class="c5 c12"
          >
            Test blog
          </h2>
          <p>
            A blog test then Idon't know what describe, it is random words just test
          </p>
        </div>
      </header>
    </div>
    <div
      class="c13"
    >
      <div
        class="c14"
      >
        <p
          class="c15"
        >
          Nenhum post encontrado aqui =(
        </p>
        <div
          class="c16"
        />
      </div>
    </div>
    <div
      class="c17"
    >
      <footer
        class="c18"
      >
        <p
          class="c19"
        >
          <p>
            O texto da footer
          </p>
        </p>
      </footer>
    </div>
    <a
      aria-label="Go to top"
      class="c20"
      href="#"
      title="Go to top"
    >
      <svg
        aria-hidden="true"
        class="c1"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6 1.41 1.41z"
        />
      </svg>
    </a>
  </div>
</div>
`;
